--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,8 @@
 name: Build Cmder
 
 # Controls when the action will run. Triggers the workflow on push or pull request events but only for the main branch
-on:
-  push:
-    branches: [ "master" ]
-    tags:
-      - "v*"
-  pull_request:
-    branches: [ "master" ]
+on : 
+  workflow_dispatch : 
 
 #---------------------------------#
 #    environment configuration    #
